2002-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-group.el (gnus-group-completing-read-group-name):
	Improve to speed up.
	(gnus-group-name-charset-group-alist): Change the default value.

2002-03-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 01.

	* lisp/message.el (message-save-drafts, message-check-8bit,
	message-send-news, message-send-mail, message-send): Replace
	`insert-buffer' with `insert-buffer-substring'.
	* lisp/gnus-art.el (gnus-article-mime-edit-article-setup,
	gnus-article-edit-exit, article-verify-x-pgp-sig): Ditto.

2002-03-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-summary-make-menu-bar): Don't provide
	"View as different encoding" submenu if the function
	`coding-system-list' is not available.

2002-03-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/pop3.el (pop3-md5): Treat a given string as binary.

2002-03-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-msg.el (gnus-summary-resend-message-edit): Use
	`mime-edit-again' instead of `mime-to-mml' to recompose a message.

2002-03-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (mm-make-temp-file): Copied from mm-util.el.

2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-fix-before-sending): Bind
	`mm-7bit-chars' to the value that concat the original value and
	escape.

	* lisp/nnheader.el (mm-7bit-chars): Remove.

2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-edit-mode): Don't call `mml-mode'.

	* lisp/nnheader.el (mm-7bit-chars): Copied from mm-bodies.el.
	(mm-multibyte-p): New alias.
	(mm-char-int): Alias to `char-int'.

2002-02-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Sync up
	with Oort-gnus.

	* lisp/nntp.el (nntp-open-via-rlogin-and-telnet): Wrap
	`call-process' with `as-binary-process'.

2002-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>
